touch about me - fix about me layout on smaller screen

--- a/app.css
+++ b/app.css
@@ -299,6 +299,10 @@ div i {
 		text-align: center;
 	}
 
+	#about {
+		flex-direction: column;
+	}
+
 }
 
 @media screen and (max-width: 645px){
